// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orderBook.component renders 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 title primary css-ahj2mt-MuiTypography-root"
      >
        Order Book
      </p>
    </div>
    <div
      className="spreadContainer desktop"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
      >
        Spread: 
        17.00
         (
        0.05
        %)
      </p>
    </div>
  </div>
  <div
    className="tablesContainer"
  >
    <div
      className="tablesContent"
    >
      <div
        className="tableColumn"
      >
        <div
          className="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
        >
          <table
            className="MuiTable-root table css-rqglhn-MuiTable-root"
            role={null}
          >
            <colgroup>
              <col
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              />
              <col
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              />
              <col
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              />
            </colgroup>
            <thead
              className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
              role={null}
            >
              <tr
                className="MuiTableRow-root MuiTableRow-head rowHeader css-1q1u3t4-MuiTableRow-root"
                role={null}
              >
                <th
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-6qfsqn-MuiTableCell-root"
                  scope="col"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                  >
                    Total
                  </p>
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-6qfsqn-MuiTableCell-root"
                  scope="col"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                  >
                    Size
                  </p>
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-6qfsqn-MuiTableCell-root"
                  scope="col"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                  >
                    Price
                  </p>
                </th>
              </tr>
            </thead>
            <tbody
              className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              role={null}
            >
              <tr
                className="MuiTableRow-root rowData rowBid css-1q1u3t4-MuiTableRow-root"
                role={null}
                style={
                  Object {
                    "backgroundPositionX": "right",
                    "backgroundSize": "35.75685339690107% 100%",
                  }
                }
              >
                <td
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-dv0mq-MuiTableCell-root"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                  >
                    1,200
                  </p>
                </td>
                <td
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-dv0mq-MuiTableCell-root"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                  >
                    1,200
                  </p>
                </td>
                <td
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-dv0mq-MuiTableCell-root"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 code success css-ahj2mt-MuiTypography-root"
                  >
                    34,062.50
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        className="spreadContainer mobile"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
        >
          Spread: 
          17.00
           (
          0.05
          %)
        </p>
      </div>
      <div
        className="tableColumn"
      >
        <div
          className="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
        >
          <table
            className="MuiTable-root table css-rqglhn-MuiTable-root"
            role={null}
          >
            <colgroup>
              <col
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              />
              <col
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              />
              <col
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              />
            </colgroup>
            <thead
              className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
              role={null}
            >
              <tr
                className="MuiTableRow-root MuiTableRow-head rowHeader css-1q1u3t4-MuiTableRow-root"
                role={null}
              >
                <th
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-6qfsqn-MuiTableCell-root"
                  scope="col"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                  >
                    Price
                  </p>
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-6qfsqn-MuiTableCell-root"
                  scope="col"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                  >
                    Size
                  </p>
                </th>
                <th
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-6qfsqn-MuiTableCell-root"
                  scope="col"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                  >
                    Total
                  </p>
                </th>
              </tr>
            </thead>
            <tbody
              className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              role={null}
            >
              <tr
                className="MuiTableRow-root rowData rowAsk css-1q1u3t4-MuiTableRow-root"
                role={null}
                style={
                  Object {
                    "backgroundPositionX": "left",
                    "backgroundSize": "100% 100%",
                  }
                }
              >
                <td
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-dv0mq-MuiTableCell-root"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 code danger css-ahj2mt-MuiTypography-root"
                  >
                    34,079.50
                  </p>
                </td>
                <td
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-dv0mq-MuiTableCell-root"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                  >
                    3,356
                  </p>
                </td>
                <td
                  aria-sort={null}
                  className="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeSmall cell css-dv0mq-MuiTableCell-root"
                  style={
                    Object {
                      "width": "33.333333333333336%",
                    }
                  }
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                  >
                    3,356
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div
    className="toggleFeedContainer"
  >
    <button
      className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root primary css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-testid="toggle-feed-button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      Toggle Feed
    </button>
  </div>
</div>
`;

exports[`orderBook.component renders with \`error\` connection status 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 title primary css-ahj2mt-MuiTypography-root"
      >
        Order Book
      </p>
    </div>
    <div
      className="spreadContainer desktop"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
      >
        Spread: 
        17.00
         (
        0.05
        %)
      </p>
    </div>
  </div>
  <div
    className="toggleFeedContainer"
  >
    <button
      className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root Mui-disabled primary css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-testid="toggle-feed-button"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      Toggle Feed
    </button>
  </div>
</div>
`;
